set fixed width so that App.js wouldn't stretch off the page

--- a/Day-I-Social-Card/social-card/src/App.css
+++ b/Day-I-Social-Card/social-card/src/App.css
@@ -2,6 +2,9 @@
   Write your styles/CSS for App.js here and import into the component that you need 
   IF you'd like to attempt to use less you'll have to research how to do this with Create React App
 */
+#root {
+  width: 950px;
+}
 
 /* Header Styles*/
 .header {
@@ -88,6 +91,7 @@
   margin-left: 65px;
   display: flex;
   justify-content: space-between;
+  color: #9FA9B0;
 }
 
 .comments, .retweet, .likes {
